<resources>
    <string name="app_name">AIManager</string>
    <string name="setting">设置</string>
    <string name="synchronous">同步</string>

    <!--关于-->
    <string name="about_version">目标管理 V1.0 beta</string>
    <string name="about_website">www.doubeepk.com</string>
    <string name="about_telephone">0769-81261668</string>
    <string name="about_server_tel">0755-82268979</string>
    <string name="about_email">service@shoelives.com</string>
    <string name="about_wrcode">关注微信：目标管理</string>
    <string name="about_copyright">Copyright © 2017 Aimanager.  All Rights Reserved</string>
    <string name="about_slogan">目标管理，每天进步一点点</string>
    <string name="about_title">关于</string>

    <!--设置-->
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_default_request">数据请求方式</string>
    <string name="setting_change_environment">切换网络环境</string>
    <string name="setting_new_version">软件版本</string>
    <string name="setting_switch_log">日志打印</string>
    <string name="setting_using_psd">启动密码</string>

    <string name="setting_profile">edit_profile</string>
    <string name="setting_introduce">个人简介</string>
    <string name="setting_unlogin">未登录</string>

    <!--登录-->
    <string name="rationale_msg_contacts">应用需要获取短信，以便读取验证码.</string>
    <string name="personal_checkcode_avalible">验证码不匹配，请重试</string>
    <string name="personal_checkcode_input">输入短信验证码</string>
    <string name="personal_request_again">重新获取验证码</string>
    <string name="personal_request_checkcode">获取验证码</string>
    <string name="personal_login">手机验证码登录</string>
    <string name="personal_wxlogin">微信登录</string>
    <string name="personal_mobile_prefix">+ 86    |</string>
    <string name="personal_change">更改</string>
    <string name="personal_sendto">发送至</string>
    <string name="personal_mobile_request">请输入手机号码</string>

    <!--首页-->
    <string name="today_aimtype">今日目标</string>
    <string name="none_aimtype_tips">你还未设定目标，去设置</string>

    <!--引导页-->
    <string name="guide_page1_text1">新年新期望</string>
    <string name="guide_page1_text2">每个女人都能拥有独一无二的鞋子</string>
    <string name="guide_page2_text1">艺术源于生活</string>
    <string name="guide_page2_text2">量身定做，个性与艺术的完美结合</string>
    <string name="guide_page3_text1">鞋生活</string>
    <string name="guide_page3_text2">个性与定制，让行走更自由</string>
    <string name="guide_start">立即体验</string>
    <string name="guide_skip">跳过</string>

    <!--版本升级-->
    <string name="more_update_version">版本更新</string>
    <string name="more_update_version_downloading">下载中...</string>
    <string name="more_update_version_hasnew">检测到有新版本,请升级至最新版本</string>
    <string name="common_exit_app">退出应用</string>
    <string name="common_update_must">立即更新</string>
    <string name="common_cancel">取消</string>
    <string name="common_update">立即更新</string>
    <string name="common_update_next">下次再说</string>

    <!--意见反馈-->
    <string name="personal_feedback_tips">我们一直在聆听，请填写您的宝贵意见~</string>
    <string name="personal_upload_feedback">添加屏幕截图（最多三张）</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_advice_input">请输入您的意见</string>
    <string name="sdcard_tips">请检查手机是否有SD卡</string>
    <string name="rationale_camera_storage">需要获取摄像头、SD卡读写权限，以便选择并保存照片.</string>

    <!--主页-->
    <string name="main_generate">新建</string>
    <string name="main_add">添加</string>
    <string name="exit_tips">再按一次返回键退出</string>
    <string name="aimobject_edit">编辑目标</string>
    <string name="aimobject_add">添加目标</string>

    <!--新建分类页-->
    <string name="new_aimtype_title_hint">请输入分类名称(10字以内)</string>
    <string name="new_aimtype_desc_hint">请输入分类描述(200字以内)</string>
    <string name="new_aimtype_recyclerable">自动创建</string>
    <string name="new_aimtype_active">激活目标</string>
    <string name="new_aimtype_countdown">开启倒计时</string>
    <string name="new_aimtype_period">执行周期</string>
    <string name="new_aimtype_start">开始时间</string>
    <string name="new_aimtype_end">结束时间</string>
    <string name="new_aimtype_priorty">优先级</string>
    <string name="new_aimtype_cover">Icon图标</string>
    <string name="period_one_day">1天</string>
    <string name="priority_five_level">5级</string>

    <string name="cancel_countdonw">取消倒计时</string>
    <string name="set_endtime">设置结束日期</string>

    <string name="submit">提交</string>

    <!--分类管理-->
    <string name="new_aimitem_title">添加目标项</string>
    <string name="new_aimitem_title_hint">请输入目标项名称(10字以内)</string>
    <string name="modify">编辑</string>
    <string name="category">分类</string>
    <string name="more">历史记录</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <!--分类详情-->
    <string name="generate_item">新建事项</string>

    <!-- 手势解锁 -->
    <string name="gesture_forget_gesture">忘记手势密码</string>

    <!-- 设置手势锁 -->
    <string name="create_gesture_activity">CreateGestureActivity</string>
    <string name="create_gesture_reset">重新设置</string>

    <!--个人主页-->
    <string name="personal_introduce">个人简介</string>
    <string name="personal_avatar">头像</string>
    <string name="personal_nickname">昵称</string>
    <string name="personal_birth">生日</string>
    <string name="personal_birth_tips">(有惊喜哦)</string>
    <string name="personal_gender">性别</string>
    <string name="personal_bind_phone">绑定手机号</string>
    <string name="personal_logout">退出登录</string>
    <string name="personal_account_info">帐号信息</string>
    <string name="logout_confirm">确认退出登录？</string>
    <string name="serve_error">服务器开小差了，请稍后重试</string>
</resources>
