<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toggle="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!--名称-->
            <EditText
                android:id="@+id/aimtype_title"
                style="@style/DarkCommonHint14Appearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="top|left"
                android:hint="@string/new_aimtype_title_hint"
                android:maxLength="10"
                android:padding="15dp" />

            <!--描述-->
            <EditText
                android:id="@+id/aimtype_desc"
                style="@style/DarkCommonHint14Appearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:gravity="top|left"
                android:hint="@string/new_aimtype_desc_hint"
                android:lines="5"
                android:maxLength="200"
                android:padding="15dp" />

            <!--自动创建-->
            <LinearLayout
                android:id="@+id/layout_recyclerable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    style="@style/DarkText14Appearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/new_aimtype_recyclerable" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/aimtype_recyclerable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    toggle:buttonTint="@color/indigo" />
            </LinearLayout>

            <!--激活自动创建-->
            <LinearLayout
                android:id="@+id/layout_active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    style="@style/DarkText14Appearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/new_aimtype_active" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/aimtype_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:checked="true"
                    toggle:buttonTint="@color/indigo" />
            </LinearLayout>

            <!--开启倒计时-->
            <LinearLayout
                android:id="@+id/layout_countdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    style="@style/DarkText14Appearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/new_aimtype_countdown" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/aimtype_countdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    toggle:buttonTint="@color/indigo" />
            </LinearLayout>

            <!--周期-->
            <LinearLayout
                android:id="@+id/layout_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:divider="@color/gray_line"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    style="@style/DarkText14Appearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_aimtype_period" />

                <TextView
                    android:id="@+id/aimtype_period"
                    style="@style/DarkText14Appearance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:text="@string/period_one_day"
                    android:textColorHint="@color/disable_hint" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_right_arrow" />
            </LinearLayout>

            <!--开始时间-->
            <LinearLayout
                android:id="@+id/layout_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:divider="@color/gray_line"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    style="@style/DarkText14Appearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_aimtype_start" />

                <TextView
                    android:id="@+id/aimtype_start"
                    style="@style/DarkText14Appearance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:textColorHint="@color/disable_hint" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_right_arrow" />
            </LinearLayout>

            <!--结束时间-->
            <LinearLayout
                android:id="@+id/layout_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:divider="@color/gray_line"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    style="@style/DarkText14Appearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_aimtype_end" />

                <TextView
                    android:id="@+id/aimtype_end"
                    style="@style/DarkText14Appearance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:textColorHint="@color/disable_hint" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_right_arrow" />
            </LinearLayout>

            <!--优先级-->
            <LinearLayout
                android:id="@+id/layout_priorty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:divider="@color/gray_line"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    style="@style/DarkText14Appearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_aimtype_priorty" />

                <TextView
                    android:id="@+id/aimtype_priorty"
                    style="@style/DarkText14Appearance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:text="@string/priority_five_level"
                    android:textColorHint="@color/disable_hint" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_right_arrow" />
            </LinearLayout>

            <!--封面图片-->
            <LinearLayout
                android:id="@+id/layout_cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:divider="@color/gray_line"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    style="@style/DarkText14Appearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_aimtype_cover" />

                <ImageView
                    android:id="@+id/aimtype_cover"
                    android:layout_width="@dimen/item_height_48"
                    android:layout_height="@dimen/item_height_48"
                    android:layout_marginRight="10dp"
                    android:gravity="right|center_vertical" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_right_arrow" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>